<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/label_result"
        android:layout_width="403dp"
        android:layout_height="123dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="59dp"


        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText

        android:id="@+id/edit_text_first_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="277dp"
        android:hint="@string/placeholder_number"

        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText

        android:id="@+id/edit_text_second_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_first_number"
        android:layout_marginTop="21dp"

        android:hint="@string/placeholder_number"
        android:inputType="number"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_first_number"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_send_number_addition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_second_number"
        android:layout_marginTop="12dp"

        android:text="@string/button_addition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_second_number"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_send_number_subtraction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_send_number_addition"
        android:text="@string/button_subtraction"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_send_number_addition"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_send_number_multiplication"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_send_number_subtraction"
        android:layout_marginTop="8dp"

        android:text="@string/button_multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_send_number_subtraction"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_send_number_division"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_send_number_multiplication"
        android:layout_marginTop="7dp"

        android:text="@string/button_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_send_number_multiplication"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Resultado:"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="3dp" />


</androidx.constraintlayout.widget.ConstraintLayout>